staging for merge

--- a/sort-viz/src/App.scss
+++ b/sort-viz/src/App.scss
@@ -1,12 +1,12 @@
 .header {
   font-size: 100px;
   color: lime;
-  background: turquoise;
+  background: navy;
   height: 10vh;
 }
 .title {
   font-size: 2rem;
-  color: navy;
+  color: whitesmoke;
   text-align: center;
 }
 
