--- a/sort-viz/src/index.css
+++ b/sort-viz/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to left, white, whitesmoke);
+  background-image: cover;
 }
 
 code {
