--- a/sort-viz/src/App.scss
+++ b/sort-viz/src/App.scss
@@ -3,6 +3,7 @@
   color: lime;
   background: navy;
   height: 10vh;
+  display: flex;
 }
 .title {
   font-size: 2rem;
@@ -14,4 +15,10 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  transform: scaleY(-1);
+}
+
+.graph_container {
+  border: 1px solid red;
+  margin: 5% auto;
 }
